<resources>
    <string name="app_name">Weather Application V 1.0.1</string>
    <string name="username_textview">Username</string>
    <string name="password_textview">Password</string>
    <string name="login_button">Log In</string>
    <string name="logout">Log Out</string>
    <string name="signup_button">Sign Up</string>
    <string name="signup_submit_button">Submit</string>
    <string name="name_textview">Name</string>
    <string name="country_textview">Country</string>
    <string name="state_textview">State</string>
    <string name="city_textview">City</string>
    <string name="test_item">Test Item</string>
    <string name="settings">Settings</string>
    <string name="settings_toolbar">Settings</string>
    <string name="celsius_unit">°C</string>
    <string name="verify_your_email">Please verify your email</string>
    <string name="enable_gps_and_internet">Please Enable GPS and Internet</string>
    <string name="title_activity_maps">Map</string>
    <string name="find_place">Find place</string>
    <string name="registered_verification_email_sent">Registered, Verification email has been sent. Please check your email</string>
    <string name="verification_email_not_sent">Registered, BUT Verification email hasn\'t been sent</string>
</resources>
