<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_textview"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline_login"
        app:layout_constraintBottom_toTopOf="@+id/username_edittext"/>

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username_textview"
        android:textSize="24dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline_login"
        app:layout_constraintLeft_toRightOf="@+id/guideline_login"
        app:layout_constraintTop_toBottomOf="@+id/username_textview"/>

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_textview"
        android:textSize="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline_login"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext"/>

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_textview"
        android:textSize="24dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline_login"
        app:layout_constraintLeft_toRightOf="@+id/guideline_login"
        app:layout_constraintTop_toBottomOf="@+id/password_textview"/>

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="12dp"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintRight_toLeftOf="@+id/guideline_login"/>

    <Button
        android:id="@+id/signup_button"
        android:text="@string/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext"
        app:layout_constraintLeft_toRightOf="@+id/guideline_login"/>

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/guideline_login"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

</android.support.constraint.ConstraintLayout>