<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupActivity">

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/username_textview_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_textview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline_signup"
        app:layout_constraintBottom_toTopOf="@+id/username_edittext_signup"/>

    <EditText
        android:id="@+id/username_edittext_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username_textview"
        app:layout_constraintRight_toLeftOf="@+id/guideline_signup"
        app:layout_constraintLeft_toRightOf="@+id/guideline_signup"
        app:layout_constraintTop_toBottomOf="@+id/username_textview_signup"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/password_textview_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_textview"
        app:layout_constraintRight_toLeftOf="@+id/guideline_signup"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext_signup"/>

    <EditText
        android:id="@+id/password_edittext_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_textview"
        app:layout_constraintRight_toLeftOf="@+id/guideline_signup"
        app:layout_constraintLeft_toRightOf="@+id/guideline_signup"
        app:layout_constraintTop_toBottomOf="@+id/password_textview_signup"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_textview"
        app:layout_constraintRight_toLeftOf="@+id/guideline_signup"
        app:layout_constraintLeft_toRightOf="@+id/guideline_signup"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_signup"/>

    <EditText
        android:id="@+id/name_edittext_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_textview"
        app:layout_constraintRight_toLeftOf="@+id/guideline_signup"
        app:layout_constraintLeft_toRightOf="@+id/guideline_signup"
        app:layout_constraintTop_toBottomOf="@+id/name_textview"/>

    <!--<TextView-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:id="@+id/country_textview"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/country_textview"-->
        <!--app:layout_constraintRight_toLeftOf="@+id/guideline_signup"-->
        <!--app:layout_constraintLeft_toRightOf="@+id/guideline_signup"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/name_edittext_signup"/>-->

    <!--<Spinner-->
        <!--android:id="@+id/country_spinner_signup"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintRight_toLeftOf="@+id/guideline_signup"-->
        <!--app:layout_constraintLeft_toRightOf="@+id/guideline_signup"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/country_textview"/>-->

    <!--<TextView-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:id="@+id/state_textview"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/state_textview"-->
        <!--app:layout_constraintRight_toLeftOf="@+id/guideline_signup"-->
        <!--app:layout_constraintLeft_toRightOf="@+id/guideline_signup"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/country_spinner_signup"/>-->

    <!--<Spinner-->
        <!--android:id="@+id/state_spinner_signup"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintRight_toLeftOf="@+id/guideline_signup"-->
        <!--app:layout_constraintLeft_toRightOf="@+id/guideline_signup"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/state_textview"/>-->

    <!--<TextView-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:id="@+id/city_textview"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/city_textview"-->
        <!--app:layout_constraintRight_toLeftOf="@+id/guideline_signup"-->
        <!--app:layout_constraintLeft_toRightOf="@+id/guideline_signup"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/state_spinner_signup"/>-->

    <!--<Spinner-->
        <!--android:id="@+id/city_spinner_signup"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintRight_toLeftOf="@+id/guideline_signup"-->
        <!--app:layout_constraintLeft_toRightOf="@+id/guideline_signup"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/city_textview"/>-->

    <Button
        android:id="@+id/signup_submit_button"
        android:text="@string/signup_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/name_edittext_signup"
        app:layout_constraintRight_toLeftOf="@+id/guideline_signup"
        app:layout_constraintLeft_toRightOf="@+id/guideline_signup"/>
    <!--app:layout_constraintTop_toBottomOf="@+id/city_spinner_signup"-->

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/guideline_signup"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

</android.support.constraint.ConstraintLayout>